--- a/index.html
+++ b/index.html
@@ -9,6 +9,44 @@
   <script src="script.js" defer></script>
 </head>
 <body>
+  <div class="w-full h-screen flex items-center justify-center">
+    <div class="grid grid-cols-3 gap-2 w-[90vmin] h-[90vmin] max-w-xl max-h-[36rem]">
+      <div class="cell">
 
+      </div>
+
+      <div class="cell">
+
+      </div>
+
+      <div class="cell">
+
+      </div>
+
+      <div class="cell">
+
+      </div>
+
+      <div class="cell">
+
+      </div>
+
+      <div class="cell">
+
+      </div>
+
+      <div class="cell">
+
+      </div>
+
+      <div class="cell">
+
+      </div>
+
+      <div class="cell">
+
+      </div>
+    </div>
+  </div>
 </body>
 </html>
