Add function to mark cell on click

--- a/index.html
+++ b/index.html
@@ -11,41 +11,41 @@
 <body>
   <div class="w-full h-screen flex items-center justify-center">
     <div class="grid grid-cols-3 gap-2 w-[90vmin] h-[90vmin] max-w-xl max-h-[36rem]">
-      <div class="cell">
+      <button class="cell-1 hover:bg-zinc-400">
+        &nbsp;
+      </button>
 
-      </div>
+      <button class="cell-2 hover:bg-zinc-400">
+        &nbsp;
+      </button>
 
-      <div class="cell">
+      <button class="cell-3 hover:bg-zinc-400">
+        &nbsp;
+      </button>
 
-      </div>
+      <button class="cell-4 hover:bg-zinc-400">
+        &nbsp;
+      </button>
 
-      <div class="cell">
+      <button class="cell-5 hover:bg-zinc-400">
+        &nbsp;
+      </button>
 
-      </div>
+      <button class="cell-6 hover:bg-zinc-400">
+        &nbsp;
+      </button>
 
-      <div class="cell">
+      <button class="cell-7 hover:bg-zinc-400">
+        &nbsp;
+      </button>
 
-      </div>
+      <button class="cell-8 hover:bg-zinc-400">
+        &nbsp;
+      </button>
 
-      <div class="cell">
-
-      </div>
-
-      <div class="cell">
-
-      </div>
-
-      <div class="cell">
-
-      </div>
-
-      <div class="cell">
-
-      </div>
-
-      <div class="cell">
-
-      </div>
+      <button class="cell-9 hover:bg-zinc-400">
+        &nbsp;
+      </button>
     </div>
   </div>
 </body>
