Refactor code into factories and modules

--- a/index.html
+++ b/index.html
@@ -11,39 +11,39 @@
 <body>
   <div class="w-full h-screen flex items-center justify-center">
     <div class="grid grid-cols-3 gap-2 w-[90vmin] h-[90vmin] max-w-xl max-h-[36rem]">
-      <button class="cell-1 hover:bg-zinc-400">
+      <button class="cell-1 hover:bg-zinc-400" data-index="0">
         &nbsp;
       </button>
 
-      <button class="cell-2 hover:bg-zinc-400">
+      <button class="cell-2 hover:bg-zinc-400" data-index="1">
         &nbsp;
       </button>
 
-      <button class="cell-3 hover:bg-zinc-400">
+      <button class="cell-3 hover:bg-zinc-400" data-index="2">
         &nbsp;
       </button>
 
-      <button class="cell-4 hover:bg-zinc-400">
+      <button class="cell-4 hover:bg-zinc-400" data-index="3">
         &nbsp;
       </button>
 
-      <button class="cell-5 hover:bg-zinc-400">
+      <button class="cell-5 hover:bg-zinc-400" data-index="4">
         &nbsp;
       </button>
 
-      <button class="cell-6 hover:bg-zinc-400">
+      <button class="cell-6 hover:bg-zinc-400" data-index="5">
         &nbsp;
       </button>
 
-      <button class="cell-7 hover:bg-zinc-400">
+      <button class="cell-7 hover:bg-zinc-400" data-index="6">
         &nbsp;
       </button>
 
-      <button class="cell-8 hover:bg-zinc-400">
+      <button class="cell-8 hover:bg-zinc-400" data-index="7">
         &nbsp;
       </button>
 
-      <button class="cell-9 hover:bg-zinc-400">
+      <button class="cell-9 hover:bg-zinc-400" data-index="8">
         &nbsp;
       </button>
     </div>
