--- a/index.html
+++ b/index.html
@@ -9,6 +9,15 @@
   <script src="script.js" defer></script>
 </head>
 <body>
+  <div class="w-screen h-screen absolute flex items-center justify-center bg-zinc-400 backdrop z-[-1] opacity-0 bg-opacity-90 transition ease-in-out duration-300">
+    <div class="rounded-lg shadow border border-zinc-400 w-[45vmin] h-[45vmin] max-w-[18rem] max-h-[18rem] bg-white bg-opacity-100 flex flex-col items-center justify-center gap-6">
+      <div class="announcement"></div>
+      
+      <button type="button" class="closeModalButton border rounded shadow">
+        Play again
+      </button>
+    </div>
+  </div>
   <div class="w-full h-screen flex items-center justify-center">
     <div class="grid grid-cols-3 gap-2 w-[90vmin] h-[90vmin] max-w-xl max-h-[36rem]">
       <button class="cell-1 hover:bg-zinc-400" data-index="0">
