Update modal styling

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 </head>
 <body>
   <div class="w-screen h-screen absolute flex items-center justify-center bg-zinc-400 backdrop z-[-1] opacity-0 bg-opacity-90 transition ease-in-out duration-300">
-    <div class="rounded-lg shadow border border-zinc-400 w-[45vmin] h-[45vmin] max-w-[18rem] max-h-[18rem] bg-white bg-opacity-100 flex flex-col items-center justify-center gap-6">
-      <div class="announcement"></div>
-      
-      <button type="button" class="closeModalButton border rounded shadow">
+    <div class="rounded-lg shadow border w-[18rem] h-[18rem] bg-white bg-opacity-100 flex flex-col items-center justify-center gap-6">
+      <div class="announcement text-zinc-500 font-medium text-4xl"></div>
+
+      <button type="button" class="closeModalButton border border-zinc-300 rounded-lg shadow px-10 py-2 text-zinc-500 hover:bg-zinc-500 hover:text-white transition font-medium">
         Play again
       </button>
     </div>
